<resources>
    <string name="app_name">SL Athlete Care</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">Verify OTP Code</string>
    <string name="otp_number">0782044414</string>
    <string name="retry">Retry</string>
    <string name="verify_code">Verify</string>
    <string name="not_you">Not you?</string>
    <string name="change_number">Change Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--- Home -->
    <string name="injury">Injuries</string>
    <string name="profile">My details</string>
    <string name="articles">Articles</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="forum">Forum</string>
    <string name="name">Yasith Samaradivakara</string>
    <string name="sport">My Sport</string>
    <string name="current">Current Injury</string>
    <string name="injury_name">My Injury</string>

    <!--- Change Password -->
    <string name="change_password">Change Password</string>
    <string name="change_password_back">Back to Login</string>
    <string name="title_activity_faactivity">FAActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_article_forum">ArticleForumActivity</string>
</resources>